fixtures/frontend/milestone-2/invalid/nested-pipe-expression/main.aivi
fun processValue x =
  x |> negate |> double
  |> double

// The pipe inside the function argument below is invalid — pipes cannot
// be nested.  The inner body must be extracted into a named declaration.
fun run =
  call (processValue 1 |> negate)
